testcases/hereiam/positive/login_TC8.sah
_setValue(_textbox("userId"), "charu@gmail.com");
_setValue(_password("password"), "hello");
_click(_div("LOGIN"));
