testcases/hereiam/negative/login_neg_TC14.sah
_setValue(_textbox("userId"), "humia");
_setValue(_password("password"), "hello");
_click(_div("LOGIN"));
_assert(_isVisible(_div("loginErr")));
